# move_base_flex

mbf_abstract_nav/: CMakeLists.txt  package.xml
mbf_abstract_nav/include/mbf_abstract_nav/: abstract_follow_execution.h  abstract_navigation_server.h  follow_action.h
mbf_abstract_nav/src/: abstract_follow_execution.cpp  abstract_navigation_server.cpp  follow_action.cpp
mbf_msgs/: CMakeLists.txt  package.xml
mbf_msgs/action/: FollowPath.action
